--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 .login-con {
-
-
-    padding: 50px 0px;
-
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
     background-color: #64CCC5;
 }
 
+.left-img {
+    /* padding: 50px; */
+}
+
+.toggle-password-button {
+    position: relative;
+    float: right;
+    bottom: 55px;
+    right: 3px;
+    border: none;
+}
+
+
 .login-h1 {
     font-family: 'Pacifico', cursive;
-
+    position: relative;
+    bottom: 70px;
     font-size: 40px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 
 .right-form {
     width: 50%;
+    padding: 40px 0px;
 }
 
 .input {
@@ -31,10 +46,15 @@
     outline: none;
 }
 
+.ddsfsd {
+    display: grid;
+    place-content: center;
+}
+
 .button {
     background-color: #176B87;
     /* background-image: linear-gradient(90deg, #176B87 0%, #04364A 50%); */
-
+    text-align: center;
     border: 1px solid #0367a6;
     color: #e9e9e9;
     cursor: pointer;
